# twollowme-bot

./: .gitignore  .pylintrc  README.md  scratch.ipynb  setup.cfg  twollowme.sqlite
twollowme_bot/: main.py
twollowme_bot/database/: sqlite.py
twollowme_bot/twitter/: client.py
