[metadata]
name = package_name
version = 0.0.1
url = https://github.com/Connect-Mor/package_name
author = Brendan Scullion
author_email = brsc2909@gmail.com
description = some description
long_description = file: README.md
classifiers =
    Development Status :: 5 - Development/Stable
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8
packages = find:
install_requires =
    pylint
    black

# You may or may not need this so remove if necessary
[options.entry_points]
console_scripts =
    cm-combine = package_name.main:main
