[metadata]
name = twollowme-bot
version = 0.0.1
url = https://github.com/brsc2909/twollowme-bot
author = Brendan Scullion
author_email = brsc2909@gmail.com
description = Twitter follower bot 
long_description = file: README.md
classifiers =
    Development Status :: 5 - Development/Stable
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9 
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.9
packages = find:
install_requires =
    twarc
    tweepy
    black
    pyyaml

# You may or may not need this so remove if necessary
[options.entry_points]
console_scripts =
    cm-combine = twollowme_bot.main:main
